made some changes in overflow in footer

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <div class="container-fluid">
                 <div class="topnav">
                     <div class="row align-items-center w-100">
-                        <div class="col-md-3 col-7">
+                        <div class="col-md-3 col-6 d-flex flex-wrap">
                             <a href="https://www.usha.com/"><img src="images/usha-logo.png" alt=""></a>
                         </div>
-                        <div class="col-md-9 col-5 pe-2 d-flex align-items-center justify-content-end ">
+                        <div class="col-md-9 col-6  pe-2 d-flex align-items-center justify-content-end ">
                             <a class="p-2 d-none d-md-block " href="https://www.facebook.com/FansbyUsha/"><img src="images/facebook-icon.png" alt=""></a>
                             <a class="p-2 d-none d-md-block "href="https://x.com/UshaIntl"><img src="images/twitter-icon.png" alt=""></a>
                             <a class="p-2 d-none d-md-block "href="https://www.instagram.com/usha_int/?hl=en"><img src="images/insta-icon.png" alt=""></a>
@@ -85,7 +85,7 @@
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" class="rounded-circle" aria-label="Slide 5"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" class="rounded-circle" aria-label="Slide 6"></button>
             </div>
-    <div class="carousel-inner rounded-carousel bg-white">
+    <div class="carousel-inner rounded-carousel bg-white" style="padding-top: 100px;">
         <div class="carousel-item active">
             <img src="images/carousel 1.jpg" style="height: 355px;" class="d-block w-100" alt="...">
         </div>
@@ -237,10 +237,10 @@
     <div class="container  ">
         <div class="row">
             <div class="mt-5"></div>
-            <div class="col-sm-7"></div>
-            <div class="col-sm-5 mt-5">
-                <h2  class="mt-5 head-h2 ">SPECIAL APPLICATION FANS</h2>
-                <p id="para-1" class="mt-4 ">Charm your guest with unique Usha
+            <div class="col-sm-7 "></div>
+            <div class="col-sm-5 mt-5 ">
+                <h2  class="mt-5 head-h2 col-12 col-md-6">SPECIAL APPLICATION FANS</h2>
+                <p id="para-1" class="mt-4 col-12 col-md-6">Charm your guest with unique Usha
                      Special Application Fans. Choose from a variety of sleek 
                      designs to suit your interior decor. Equipped with exclusive 
                      features like  superior air circulation and effective air delivery.</p>
@@ -279,7 +279,7 @@
                     <li class="mb-3"><a class="text-white text-decoration-none" href="">Universal Fans</a></li>
                 </ul>
             </div>
-            <div class="col-md-5 mt-5 col-8">
+            <div class="col-md-5 mt-5 col-12 col-sm-6">
                 <h6 id="head1-h6" class="text-white mt-5">FIND THE PRODUCT RANGE AT</h6>
                 <h6 class="text-center text-white pt-3">Retail Store</h6>
                 <div class="d-flex mt-3 py-3 " style="border: 1px solid white;border-radius: 10px;" >
@@ -299,13 +299,13 @@
             <button class="btn bg-light " id="btn-4">FIND A RETAIL STORE NEAR YOU</button>
         </div>
         </div>
-            <div class="col-md-3 mt-5 col-4">
+            <div class="col-md-3 mt-5 col-12 col-sm-6 text-center">
                 <div class="p-4">
-                <h6 class="text-white ps-5 mt-5">Buy Online</h6>
-                <ul class="ms-2">
-                    <li class="py-2"><img src="images/amazon.jpg" alt=""></li>
-                    <li class="py-2"><img src="images/flip.jpg" alt=""></li>
-                    <li class="py-2"><img src="images/tata.png" alt=""></li>
+                <h6 class="text-white  mt-5">Buy Online</h6>
+                <ul class="ms-2 list-unstyled text-center d-flex flex-wrap justify-content-center">
+                    <li class="py-2 w-100 ps-2"><img src="images/amazon.jpg" alt=""></li>
+                    <li class="py-2 w-100 ps-2" ><img src="images/flip.jpg" alt=""></li>
+                    <li class="py-2 w-100 ps-2"><img src="images/tata.png" alt=""></li>
                 </ul>
             </div>
             </div>
