made some changes

--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
             <div class="mt-5"></div>
             <div class="col-sm-7 "></div>
             <div class="col-sm-5 mt-5 ">
-                <h2  class="mt-5 head-h2 col-12 col-md-6">SPECIAL APPLICATION FANS</h2>
-                <p id="para-1" class="mt-4 col-12 col-md-6">Charm your guest with unique Usha
+                <h2  class="mt-5 head-h2 ">SPECIAL APPLICATION FANS</h2>
+                <p id="para-1" class="mt-4 col-12 ">Charm your guest with unique Usha
                      Special Application Fans. Choose from a variety of sleek 
                      designs to suit your interior decor. Equipped with exclusive 
                      features like  superior air circulation and effective air delivery.</p>
